Bug 1656672 - Port bug 1531609 part 1: Rename overflow:-moz-hidden-unscrollable to overflow:clip. r=mkmelin
--HG--
extra : rebase_source : de5f3d4ea372369d547a82793a3e0bd1fb39ffff

--- a/mail/themes/shared/mail/EditorDialog.css
+++ b/mail/themes/shared/mail/EditorDialog.css
@@ -252,7 +252,7 @@ tree.list {
   max-height: 52px;
   min-height: 52px;
   margin: 6px 5px;
-  overflow: -moz-hidden-unscrollable;
+  overflow: clip;
 }
 
 #preview-image-holder {
